z-index fix for header

--- a/scout-ui/src/home/index.less
+++ b/scout-ui/src/home/index.less
@@ -69,10 +69,14 @@
   }
   header {
     padding: 12px 20px;
+    position: relative;
+    z-index: 1;
   }
   .refine-view-container {
     background: @gray8;
     padding: 15px 20px;
+    position: relative;
+    z-index: 1;
 
     input.form-control.input-sm {
       width: 90%;
